--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
 								<i class="icofont-google-map"></i>
 								<h4>Location:</h4>
 								<!-- <p>A108 Adam Street, New York, NY 535022</p> -->
-								<p>Lagos State, Nigeria.</p>
+								<p>city, State, Nigeria.</p>
 							</div>
 
 							<!-- email -->
