--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 
-	<title>Small business | Home</title>
+	<title>Freelancer | Home</title>
 
 	<meta content="" name="description">
 	<meta content="" name="keywords">
